Email Resource Management - Added AzureCLI Python documentation and added tabs for PowerShell and AzureClI Python

--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -1829,3 +1829,12 @@ groups:
     title: Azure portal
   - id: platform-nocode
     title: Power Platform
+# Owner: Deepika0530
+- id: acs-ps-azclipython
+  title: Programming languages
+  prompt: Choose a programming language
+  pivots:
+  - id: platform-powershell
+    title: Azure PowerShell
+  - id: platform-azclipython
+    title: AzureCLI Python
