Email Resource Management - Added AzureCLI PowerShell documentation

--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -1830,11 +1830,13 @@ groups:
   - id: platform-nocode
     title: Power Platform
 # Owner: Deepika0530
-- id: acs-ps-azclipython
+- id: acs-ps-azclips-azclipython
   title: Programming languages
   prompt: Choose a programming language
   pivots:
   - id: platform-powershell
     title: Azure PowerShell
+  - id: platform-azclips
+    title: AzureCLI PowerShell
   - id: platform-azclipython
     title: AzureCLI Python
