Updated Tab names and get the latest changes from the "EmailResourceManagement-AzureCLI-Python" branch PR

--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -1837,6 +1837,6 @@ groups:
   - id: platform-powershell
     title: Azure PowerShell
   - id: platform-azclips
-    title: AzureCLI PowerShell
+    title: Azure CLI with PowerShell Commandlets
   - id: platform-azclipython
-    title: AzureCLI Python
+    title: Azure CLI with Python Script
