--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -146,11 +146,11 @@
     href: upgrade-virtual-wan.md
   - name: Integrated NVA in a virtual hub
     items:
-    - name: Create a NVA in a virtual hub 
+    - name: Create an NVA in a virtual hub 
       href: how-to-nva-hub.md
-    - name: Restart a NVA in a virtual hub
+    - name: Restart an NVA in a virtual hub
       href: how-to-network-virtual-appliance-restart.md
-    - name: Reimage a NVA in a virtual hub
+    - name: Reimage an NVA in a virtual hub
       href: how-to-network-virtual-appliance-reimage.md
     - name: Configure DNAT/Internet inbound
       href: how-to-network-virtual-appliance-inbound.md
