--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -1,126 +1,66 @@
 - name: ExpressRoute documentation
   href: index.yml
-- name: Overview
+- name: Get started
   items:
-  - name: What is ExpressRoute?
-    href: expressroute-introduction.md
-  - name: Well-Architected for ExpressRoute
-    href: /azure/well-architected/service-guides/azure-expressroute
-- name: Quickstarts
-  items:
-  - name: Create an ExpressRoute circuit - Portal
-    href: expressroute-howto-circuit-portal-resource-manager.md
-  - name: Create an ExpressRoute circuit - PowerShell
-    href: expressroute-howto-circuit-arm.md
-  - name: Create an ExpressRoute circuit - CLI
-    href: howto-circuit-cli.md
-  - name: Create an ExpressRoute circuit - Bicep
-    displayName: ARM, Resource Manager, Template
-    href: quickstart-create-expressroute-vnet-bicep.md
-  - name: Create an ExpressRoute circuit - ARM template
-    displayName: Resource Manager
-    href: quickstart-create-expressroute-vnet-template.md
-  - name: Create an ExpressRoute circuit - Terraform
-    href: quickstart-create-expressroute-vnet-terraform.md
+  - name: Overview
+    items:
+      - name: What is ExpressRoute?
+        href: expressroute-introduction.md
+      - name: Well-Architected for ExpressRoute
+        href: /azure/well-architected/service-guides/azure-expressroute
+      - name: Before you start using ExpressRoute
+        items:
+        - name: Prerequisites
+          href: expressroute-prerequisites.md
+        - name: Connectivity models
+          href: expressroute-connectivity-models.md
+        - name: Workflows
+          href: expressroute-workflows.md
+        - name: Routing requirements
+          href: expressroute-routing.md
+      - name: Locations and partners
+        items:
+        - name: Providers by location
+          href: expressroute-locations-providers.md
+        - name: Locations by provider
+          href: expressroute-locations.md
+      - name: Best practices
+        items:
+        - name: Best practices for network security and cloud services
+          href: /azure/cloud-adoption-framework/reference/networking-vdc
+        - name: Optimize routing
+          href: expressroute-optimize-routing.md
+        - name: Asymmetric routing
+          href: expressroute-asymmetric-routing.md
+        - name: NAT for ExpressRoute
+          href: expressroute-nat.md
+      - name: FAQ
+        href: expressroute-faqs.md
+      - name: Service limitations
+        href: ../azure-resource-manager/management/azure-subscription-service-limits.md?toc=/azure/expressroute/toc.json#azure-expressroute-limits
+  - name: Quickstarts
+    items:
+    - name: Create an ExpressRoute circuit - Portal
+      href: expressroute-howto-circuit-portal-resource-manager.md
+    - name: Create an ExpressRoute circuit - PowerShell
+      href: expressroute-howto-circuit-arm.md
+    - name: Create an ExpressRoute circuit - CLI
+      href: howto-circuit-cli.md
+    - name: Create an ExpressRoute circuit - Bicep
+      displayName: ARM, Resource Manager, Template
+      href: quickstart-create-expressroute-vnet-bicep.md
+    - name: Create an ExpressRoute circuit - ARM template
+      displayName: Resource Manager
+      href: quickstart-create-expressroute-vnet-template.md
+    - name: Create an ExpressRoute circuit - Terraform
+      href: quickstart-create-expressroute-vnet-terraform.md
   expanded: true
-- name: Tutorials
+- name: Configure
   items:
-  - name: Establish a private connection to a virtual network
-    href: configure-expressroute-private-peering.md
-- name: Concepts
-  items:
-  - name: Work remotely
+  - name: Circuit configuration
     items:
-    - name: Support for working remotely
-      href: ../networking/working-remotely-support.md?toc=/azure/expressroute/toc.json
-    - name: Hybrid connectivity for remote users
-      href: work-remotely-support.md
-  - name: Before you start using ExpressRoute
-    items:
-    - name: Prerequisites
-      href: expressroute-prerequisites.md
-    - name: Connectivity models
-      href: expressroute-connectivity-models.md
-    - name: Workflows
-      href: expressroute-workflows.md
-    - name: Routing requirements
-      href: expressroute-routing.md
-  - name: Locations and partners
-    items:
-    - name: Providers by location
-      href: expressroute-locations-providers.md
-    - name: Locations by provider
-      href: expressroute-locations.md
-  - name: ExpressRoute FAQ
-    href: expressroute-faqs.md
-  - name: Circuits and peering
-    items:
-    - name: About circuits and peering
+    - name: Overview
       href: expressroute-circuit-peerings.md
-    - name: About upgrading circuit bandwidth
-      href: about-upgrade-circuit-bandwidth.md
-    - name: Moving circuits from classic to Resource Manager
-      href: expressroute-move.md
-  - name: About ExpressRoute gateways
-    href: expressroute-about-virtual-network-gateways.md
-  - name: About zone-redundant gateways for Availability Zones
-    href: ../vpn-gateway/about-zone-redundant-vnet-gateways.md?toc=/azure/expressroute/toc.json
-  - name: About Migrating to an AZ gateway
-    href: gateway-migration.md
-  - name: About ExpressRoute FastPath
-    href: about-fastpath.md
-  - name: About ExpressRoute Direct
-    href: expressroute-erdirect-about.md
-  - name: About ExpressRoute Global Reach
-    href: expressroute-global-reach.md
-  - name: About ExpressRoute Metro
-    href: metro.md
-  - name: About ExpressRoute encryption
-    href: expressroute-about-encryption.md
-  - name: About ExpressRoute limits
-    href: ../azure-resource-manager/management/azure-subscription-service-limits.md?toc=/azure/expressroute/toc.json#azure-expressroute-limits
-  - name: Design architecture for ExpressRoute resiliency
-    href: design-architecture-for-resiliency.md
-  - name: ExpressRoute Traffic Collector
-    href: traffic-collector.md
-  - name: Connect Azure to public cloud
-    href: expressroute-connect-azure-to-public-cloud.md
-  - name: Connectivity between virtual networks
-    href: virtual-network-connectivity-guidance.md
-  - name: Planned maintenance guidance
-    href: planned-maintenance.md
-  - name: Cross-network connectivity
-    href: cross-network-connectivity.md
-  - name: BGP communities
-    href: bgp-communities.md
-  - name: Security
-    items:
-    - name: Security baseline
-      href: /security/benchmark/azure/baselines/expressroute-security-baseline?toc=/azure/expressroute/TOC.json
-    - name: Roles and permissions
-      href: roles-permissions.md
-  - name: BFD over ExpressRoute
-    href: expressroute-bfd.md
-  - name: QoS requirements
-    href: expressroute-qos.md
-  - name: Rate limit for service provider ports
-    href: provider-rate-limit.md
-  - name: Routing Microsoft 365 traffic over ExpressRoute
-    href: /microsoft-365/enterprise/azure-expressroute?toc=/azure/expressroute/TOC.json
-  - name: Routing Microsoft PSTN traffic over ExpressRoute
-    href: using-expressroute-for-microsoft-pstn.md
-  - name: High Availability - Design
-    href: designing-for-high-availability-with-expressroute.md
-  - name: Disaster Recovery - Design
-    items:
-    - name: Private Peering
-      href: designing-for-disaster-recovery-with-expressroute-privatepeering.md
-    - name: Using VPN as a backup
-      href: use-s2s-vpn-as-backup-for-expressroute-privatepeering.md
-- name: How-to guides
-  items:
-  - name: Configure ExpressRoute
-    items:
     - name: Create and modify peering configuration
       items:
       - name: Azure portal
@@ -129,7 +69,85 @@
         href: expressroute-howto-routing-arm.md
       - name: Azure CLI
         href: howto-routing-cli.md
-    - name: Configure a virtual network gateway for ExpressRoute
+    - name: Rate limit for service provider ports
+      href: provider-rate-limit.md
+    - name: Enable and disable peerings
+      items:
+      - name: Azure portal
+        href: expressroute-howto-reset-peering-portal.md
+      - name: Azure PowerShell
+        href: expressroute-howto-reset-peering.md
+    - name: BFD over ExpressRoute
+      href: expressroute-bfd.md
+    - name: Private peering
+      items:
+      - name: Cross-network connectivity
+        href: cross-network-connectivity.md
+      - name: Establish a private connection to a virtual network
+        href: configure-expressroute-private-peering.md
+      - name: BGP community
+        href: bgp-communities.md
+      - name: Configure BGP community for VNet
+        items:
+        - name: Azure portal
+          href: how-to-configure-custom-bgp-communities-portal.md
+        - name: Azure PowerShell
+          href: how-to-configure-custom-bgp-communities.md
+      - name: Add IPv6 support for private peering
+        items:
+        - name: Azure portal
+          href: expressroute-howto-add-ipv6-portal.md
+        - name: Azure PowerShell
+          href: expressroute-howto-add-ipv6-powershell.md
+        - name: Azure CLI
+          href: expressroute-howto-add-ipv6-cli.md
+      - name: Connectivity between virtual networks
+        href: virtual-network-connectivity-guidance.md
+    - name: Microsoft peering
+      items:
+      - name: Routing Microsoft 365 traffic over ExpressRoute
+        href: /microsoft-365/enterprise/azure-expressroute?toc=/azure/expressroute/TOC.json
+      - name: Configure route filters for Microsoft peering
+        items:
+        - name: Azure portal
+          href: how-to-routefilter-portal.md
+        - name: Azure PowerShell
+          href: how-to-routefilter-powershell.md
+        - name: Azure CLI
+          href: how-to-routefilter-cli.md
+        - name: QoS requirements
+          href: expressroute-qos.md
+      - name: Routing Microsoft PSTN traffic over ExpressRoute
+        href: using-expressroute-for-microsoft-pstn.md
+    - name: Bandwidth
+      items:
+      - name: Overview
+        href: about-upgrade-circuit-bandwidth.md
+      - name: Upgrade circuit bandwidth
+        items:
+        - name: Azure portal
+          href: expressroute-howto-circuit-portal-resource-manager.md#modify
+        - name: Azure PowerShell
+          href: expressroute-howto-circuit-arm?tabs=maximum.md#to-update-the-expressroute-circuit-bandwidth
+        - name: Azure CLI
+          href: howto-circuit-cli.md#to-update-the-expressroute-circuit-bandwidth
+    - name: Migrate to a new circuit
+      href: circuit-migration.md
+    - name: Change circuit from classic to Resource Manager
+      item: 
+      - name: Overview
+        href: expressroute-move.md
+      - name: Move a circuit from classic to Resource Manager
+        href: expressroute-howto-move-arm.md
+      - name: Migrate associated virtual networks from classic to Resource Manager
+        href: expressroute-migration-classic-resource-manager.md
+- name: Deploy
+  items:
+  - name: ExpressRoute gateways
+    items:
+    - name: Overview
+      href: expressroute-about-virtual-network-gateways.md
+    - name: Configure a virtual network gateway
       items:
       - name: Azure portal
         href: expressroute-howto-add-gateway-portal-resource-manager.md
@@ -143,16 +161,32 @@
         href: expressroute-howto-linkvnet-arm.md
       - name: Azure CLI
         href: expressroute-howto-linkvnet-cli.md
-  - name: Configure route filters for Microsoft peering
+  - name: Zone-redundant gateways
     items:
-    - name: Azure portal
-      href: how-to-routefilter-portal.md
-    - name: Azure PowerShell
-      href: how-to-routefilter-powershell.md
-    - name: Azure CLI
-      href: how-to-routefilter-cli.md
-  - name: Configuring ExpressRoute Direct
+    - name: Overview
+      href: ../vpn-gateway/about-zone-redundant-vnet-gateways.md?toc=/azure/expressroute/toc.json
+    - name: About Migrating to an AZ gateway
+      href: gateway-migration.md
+    - name: Migrate to an AZ gateway
+      items:
+      - name: Azure portal
+        href: expressroute-howto-gateway-migration-portal.md
+      - name: Azure PowerShell
+        href: expressroute-howto-gateway-migration-powershell.md
+  - name: FastPath
     items:
+    - name: Overview
+      href: about-fastpath.md
+    - name: Configure FastPath
+      items:
+      - name: Azure portal
+        href: expressroute-howto-linkvnet-portal-resource-manager.md#configure-expressroute-fastpath
+      - name: Azure PowerShell
+        href: expressroute-howto-linkvnet-arm.md?tabs=maximum#configure-expressroute-fastpath
+  - name: ExpressRoute Direct
+    items:
+    - name: Overview
+      href: expressroute-erdirect-about.md
     - name: Configure ExpressRoute Direct
       items:
       - name: Azure portal
@@ -163,20 +197,76 @@
         href: expressroute-howto-expressroute-direct-cli.md
     - name: Configure MACsec for ExpressRoute Direct ports
       href: expressroute-howto-macsec.md
-  - name: Configure ExpressRoute Global Reach
+    - name: Rate limit for ExpressRoute Direct circuit
+      href: rate-limit.md
+  - name: Global Reach
+    items:
+    - name: Overview
+      href: expressroute-global-reach.md
+    - name: Configure Global Reach
+      items:
+      - name: Azure portal
+        href: expressroute-howto-set-global-reach-portal.md
+      - name: Azure PowerShell
+        href: expressroute-howto-set-global-reach.md
+  - name: ExpressRoute Metro
+    href: metro.md
+  - name: Traffic Collector
+    items:
+    - name: Overview
+      href: traffic-collector.md
+    - name: Configure Traffic Collector
+      items:
+      - name: Azure portal
+        href: how-to-configure-traffic-collector.md
+      - name: Azure PowerShell
+        href: how-to-configure-traffic-collector-powershell.md
+      - name: Azure CLI
+        href: how-to-configure-traffic-collector-cli.md
+- name: Resiliency
+  items:
+  - name: Design architecture for resiliency
+    href: design-architecture-for-resiliency.md
+  - name: Evaluate ExpressRoute circuit resiliency
+    href: evaluate-circuit-resiliency.md
+  - name: Configure ExpressRoute and site-to-site coexisting connections
     items:
     - name: Azure portal
-      href: expressroute-howto-set-global-reach-portal.md
+      href: how-to-configure-coexisting-gateway-portal.md
     - name: Azure PowerShell
-      href: expressroute-howto-set-global-reach.md
-  - name: Add IPv6 support for private peering
+      href: expressroute-howto-coexist-resource-manager.md
+  - name: Create a zone-redundant VNet gateway in Azure Availability Zones
+    href: ../vpn-gateway/create-zone-redundant-vnet-gateway.md?toc=/azure/expressroute/toc.json
+  - name: High Availability - Design
+    href: designing-for-high-availability-with-expressroute.md
+  - name: Disaster Recovery - Design
     items:
-    - name: Azure portal
-      href: expressroute-howto-add-ipv6-portal.md
-    - name: Azure PowerShell
-      href: expressroute-howto-add-ipv6-powershell.md
-    - name: Azure CLI
-      href: expressroute-howto-add-ipv6-cli.md
+    - name: Private Peering
+      href: designing-for-disaster-recovery-with-expressroute-privatepeering.md
+    - name: Using VPN as a backup
+      href: use-s2s-vpn-as-backup-for-expressroute-privatepeering.md
+- name: Security
+  items:
+  - name: Security baseline
+    href: /security/benchmark/azure/baselines/expressroute-security-baseline?toc=/azure/expressroute/TOC.json
+  - name: Roles and permissions
+    href: roles-permissions.md
+  - name: Encryption
+    href: expressroute-about-encryption.md
+  - name: Encrypt traffic over circuits
+    items:
+    - name: Configure a site-to-site VPN over Microsoft peering
+      href: site-to-site-vpn-over-microsoft-peering.md
+    - name: IPsec VPN over private peering
+      href: ../vpn-gateway/site-to-site-vpn-private-peering.md?toc=/azure/expressroute/toc.json
+    - name: Configure IPsec transport mode for Windows hosts
+      href: expressroute-howto-ipsec-transport-private-windows.md
+- name: Operational excellence
+  items:
+  - name: Connect Azure to public cloud
+    href: expressroute-connect-azure-to-public-cloud.md
+  - name: Plan and manage costs
+    href: plan-manage-cost.md
   - name: Monitoring
     items:
     - name: Monitor ExpressRoute
@@ -191,70 +281,18 @@
       href: maintenance-alerts.md
     - name: Configure custom alerts to monitor advertised routes
       href: how-to-custom-route-alert.md
-  - name: Evaluate ExpressRoute circuit resiliency
-    href: evaluate-circuit-resiliency.md
-  - name: Configure customer-controlled gateway maintenance
-    href: customer-controlled-gateway-maintenance.md
-  - name: Managing peerings
+  - name: Planned maintenance
     items:
-    - name: Enable and disable peerings
-      items:
-      - name: Azure portal
-        href: expressroute-howto-reset-peering-portal.md
-      - name: Azure PowerShell
-        href: expressroute-howto-reset-peering.md
-    - name: Configure BGP community value for VNet
-      items:
-      - name: Azure portal
-        href: how-to-configure-custom-bgp-communities-portal.md
-      - name: Azure PowerShell
-        href: how-to-configure-custom-bgp-communities.md
-  - name: Encrypt traffic over circuits
+      - name: Guidance
+        href: planned-maintenance.md
+      - name: Configure controlled gateway maintenance
+        href: customer-controlled-gateway-maintenance.md
+  - name: Work remotely
     items:
-    - name: Configure a site-to-site VPN over Microsoft peering
-      href: site-to-site-vpn-over-microsoft-peering.md
-    - name: IPsec VPN over private peering
-      href: ../vpn-gateway/site-to-site-vpn-private-peering.md?toc=/azure/expressroute/toc.json
-    - name: Configure IPsec transport mode for Windows hosts
-      href: expressroute-howto-ipsec-transport-private-windows.md
-  - name: Redundancy
-    items:
-    - name: Configure ExpressRoute and site-to-site coexisting connections
-      items:
-      - name: Azure portal
-        href: how-to-configure-coexisting-gateway-portal.md
-      - name: Azure PowerShell
-        href: expressroute-howto-coexist-resource-manager.md
-    - name: Create a zone-redundant VNet gateway in Azure Availability Zones
-      href: ../vpn-gateway/create-zone-redundant-vnet-gateway.md?toc=/azure/expressroute/toc.json
-  - name: Plan and manage costs
-    href: plan-manage-cost.md
-  - name: Rate limit for ExpressRoute Direct circuit
-    href: rate-limit.md
-  - name: Migrate to a new circuit
-    href: circuit-migration.md
-  - name: Migrate to an AZ gateway
-    items:
-    - name: Azure portal
-      href: expressroute-howto-gateway-migration-portal.md
-    - name: Azure PowerShell
-      href: expressroute-howto-gateway-migration-powershell.md
-  - name: Moving from classic to Resource Manager
-    items:
-    - name: Move a circuit from classic to Resource Manager
-      href: expressroute-howto-move-arm.md
-    - name: Migrate associated virtual networks from classic to Resource Manager
-      href: expressroute-migration-classic-resource-manager.md
-  - name: Best Practices
-    items:
-    - name: Best practices for network security and cloud services
-      href: /azure/cloud-adoption-framework/reference/networking-vdc
-    - name: Optimize routing
-      href: expressroute-optimize-routing.md
-    - name: Asymmetric routing
-      href: expressroute-asymmetric-routing.md
-    - name: NAT for ExpressRoute
-      href: expressroute-nat.md
+    - name: Support for working remotely
+      href: ../networking/working-remotely-support.md?toc=/azure/expressroute/toc.json
+    - name: Hybrid connectivity for remote users
+      href: work-remotely-support.md
   - name: Troubleshoot
     items:
     - name: Obtain correlation ID
