--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -24,20 +24,11 @@
           href: expressroute-locations-providers.md
         - name: Locations by provider
           href: expressroute-locations.md
-      - name: Best practices
-        items:
-        - name: Best practices for network security and cloud services
-          href: /azure/cloud-adoption-framework/reference/networking-vdc
-        - name: Optimize routing
-          href: expressroute-optimize-routing.md
-        - name: Asymmetric routing
-          href: expressroute-asymmetric-routing.md
-        - name: NAT for ExpressRoute
-          href: expressroute-nat.md
       - name: FAQ
         href: expressroute-faqs.md
       - name: Service limitations
         href: ../azure-resource-manager/management/azure-subscription-service-limits.md?toc=/azure/expressroute/toc.json#azure-expressroute-limits
+    expanded: true
   - name: Quickstarts
     items:
     - name: Create an ExpressRoute circuit - Portal
@@ -69,18 +60,16 @@
         href: expressroute-howto-routing-arm.md
       - name: Azure CLI
         href: howto-routing-cli.md
-    - name: Rate limit for service provider ports
-      href: provider-rate-limit.md
-    - name: Enable and disable peerings
-      items:
-      - name: Azure portal
-        href: expressroute-howto-reset-peering-portal.md
-      - name: Azure PowerShell
-        href: expressroute-howto-reset-peering.md
-    - name: BFD over ExpressRoute
-      href: expressroute-bfd.md
     - name: Private peering
       items:
+      - name: Link a virtual network to an ExpressRoute circuit
+        items:
+        - name: Azure portal
+          href: expressroute-howto-linkvnet-portal-resource-manager.md
+        - name: Azure PowerShell
+          href: expressroute-howto-linkvnet-arm.md
+        - name: Azure CLI
+          href: expressroute-howto-linkvnet-cli.md
       - name: Cross-network connectivity
         href: cross-network-connectivity.md
       - name: Establish a private connection to a virtual network
@@ -119,6 +108,12 @@
           href: expressroute-qos.md
       - name: Routing Microsoft PSTN traffic over ExpressRoute
         href: using-expressroute-for-microsoft-pstn.md
+    - name: Enable and disable peerings
+      items:
+      - name: Azure portal
+        href: expressroute-howto-reset-peering-portal.md
+      - name: Azure PowerShell
+        href: expressroute-howto-reset-peering.md
     - name: Bandwidth
       items:
       - name: Overview
@@ -131,16 +126,26 @@
           href: expressroute-howto-circuit-arm?tabs=maximum.md#to-update-the-expressroute-circuit-bandwidth
         - name: Azure CLI
           href: howto-circuit-cli.md#to-update-the-expressroute-circuit-bandwidth
-    - name: Migrate to a new circuit
-      href: circuit-migration.md
-    - name: Change circuit from classic to Resource Manager
-      item: 
-      - name: Overview
-        href: expressroute-move.md
-      - name: Move a circuit from classic to Resource Manager
-        href: expressroute-howto-move-arm.md
-      - name: Migrate associated virtual networks from classic to Resource Manager
-        href: expressroute-migration-classic-resource-manager.md
+  - name: Global Reach
+    items:
+    - name: Overview
+      href: expressroute-global-reach.md
+    - name: Configure Global Reach
+      items:
+      - name: Azure portal
+        href: expressroute-howto-set-global-reach-portal.md
+      - name: Azure PowerShell
+        href: expressroute-howto-set-global-reach.md
+  - name: FastPath
+    items:
+    - name: Overview
+      href: about-fastpath.md
+    - name: Configure FastPath
+      items:
+      - name: Azure portal
+        href: expressroute-howto-linkvnet-portal-resource-manager.md#configure-expressroute-fastpath
+      - name: Azure PowerShell
+        href: expressroute-howto-linkvnet-arm.md?tabs=maximum#configure-expressroute-fastpath
 - name: Deploy
   items:
   - name: ExpressRoute gateways
@@ -153,14 +158,6 @@
         href: expressroute-howto-add-gateway-portal-resource-manager.md
       - name: Azure PowerShell
         href: expressroute-howto-add-gateway-resource-manager.md
-    - name: Link a virtual network to an ExpressRoute circuit
-      items:
-      - name: Azure portal
-        href: expressroute-howto-linkvnet-portal-resource-manager.md
-      - name: Azure PowerShell
-        href: expressroute-howto-linkvnet-arm.md
-      - name: Azure CLI
-        href: expressroute-howto-linkvnet-cli.md
   - name: Zone-redundant gateways
     items:
     - name: Overview
@@ -173,16 +170,6 @@
         href: expressroute-howto-gateway-migration-portal.md
       - name: Azure PowerShell
         href: expressroute-howto-gateway-migration-powershell.md
-  - name: FastPath
-    items:
-    - name: Overview
-      href: about-fastpath.md
-    - name: Configure FastPath
-      items:
-      - name: Azure portal
-        href: expressroute-howto-linkvnet-portal-resource-manager.md#configure-expressroute-fastpath
-      - name: Azure PowerShell
-        href: expressroute-howto-linkvnet-arm.md?tabs=maximum#configure-expressroute-fastpath
   - name: ExpressRoute Direct
     items:
     - name: Overview
@@ -199,16 +186,6 @@
       href: expressroute-howto-macsec.md
     - name: Rate limit for ExpressRoute Direct circuit
       href: rate-limit.md
-  - name: Global Reach
-    items:
-    - name: Overview
-      href: expressroute-global-reach.md
-    - name: Configure Global Reach
-      items:
-      - name: Azure portal
-        href: expressroute-howto-set-global-reach-portal.md
-      - name: Azure PowerShell
-        href: expressroute-howto-set-global-reach.md
   - name: ExpressRoute Metro
     href: metro.md
   - name: Traffic Collector
@@ -216,13 +193,7 @@
     - name: Overview
       href: traffic-collector.md
     - name: Configure Traffic Collector
-      items:
-      - name: Azure portal
-        href: how-to-configure-traffic-collector.md
-      - name: Azure PowerShell
-        href: how-to-configure-traffic-collector-powershell.md
-      - name: Azure CLI
-        href: how-to-configure-traffic-collector-cli.md
+      href: how-to-configure-traffic-collector.md
 - name: Resiliency
   items:
   - name: Design architecture for resiliency
@@ -252,21 +223,39 @@
   - name: Roles and permissions
     href: roles-permissions.md
   - name: Encryption
-    href: expressroute-about-encryption.md
-  - name: Encrypt traffic over circuits
     items:
-    - name: Configure a site-to-site VPN over Microsoft peering
-      href: site-to-site-vpn-over-microsoft-peering.md
-    - name: IPsec VPN over private peering
-      href: ../vpn-gateway/site-to-site-vpn-private-peering.md?toc=/azure/expressroute/toc.json
-    - name: Configure IPsec transport mode for Windows hosts
-      href: expressroute-howto-ipsec-transport-private-windows.md
+    - name: Overview
+      href: expressroute-about-encryption.md
+    - name: Encrypt traffic over circuits
+      items:
+      - name: Configure a site-to-site VPN over Microsoft peering
+        href: site-to-site-vpn-over-microsoft-peering.md
+      - name: IPsec VPN over private peering
+        href: ../vpn-gateway/site-to-site-vpn-private-peering.md?toc=/azure/expressroute/toc.json
+      - name: Configure IPsec transport mode for Windows hosts
+        href: expressroute-howto-ipsec-transport-private-windows.md
 - name: Operational excellence
   items:
   - name: Connect Azure to public cloud
     href: expressroute-connect-azure-to-public-cloud.md
   - name: Plan and manage costs
     href: plan-manage-cost.md
+  - name: Rate limit for service provider ports
+    href: provider-rate-limit.md
+  - name: BFD over ExpressRoute
+    href: expressroute-bfd.md
+  - name: Migrate to a new circuit
+    href: circuit-migration.md
+  - name: Best practices
+    items:
+    - name: Best practices for network security and cloud services
+      href: /azure/cloud-adoption-framework/reference/networking-vdc
+    - name: Optimize routing
+      href: expressroute-optimize-routing.md
+    - name: Asymmetric routing
+      href: expressroute-asymmetric-routing.md
+    - name: NAT for ExpressRoute
+      href: expressroute-nat.md
   - name: Monitoring
     items:
     - name: Monitor ExpressRoute
@@ -334,8 +323,6 @@
     items:
     - name: Control Plane Analysis
       href: ../networking/connectivity-interoperability-control-plane.md?toc=/azure/expressroute/toc.json
-  - name: Azure Roadmap
-    href: https://azure.microsoft.com/roadmap/?category=networking
   - name: Networking Blog
     href: https://azure.microsoft.com/blog/topics/networking/
   - name: Pricing
@@ -343,11 +330,9 @@
   - name: Pricing calculator
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Service updates
-    href: https://azure.microsoft.com/updates/?product=expressroute
+    href: https://azure.microsoft.com/en-us/updates/?product=expressroute&filters=%5B%22Azure+ExpressRoute%22%5D
   - name: SLA
     href: https://azure.microsoft.com/support/legal/sla/
-  - name: Subscription and Service Limits
-    href: ../azure-resource-manager/management/azure-subscription-service-limits.md?toc=/azure/expressroute/toc.json
   - name: ExpressRoute for Cloud Solution Providers (CSP)
     href: expressroute-for-cloud-solution-providers.md
   - name: Videos
@@ -379,3 +364,11 @@
       href: expressroute-howto-linkvnet-classic.md
     - name: Configure ExpressRoute and S2S coexisting connections
       href: expressroute-howto-coexist-classic.md
+    - name: Change circuit from classic to Resource Manager
+      items: 
+      - name: Overview
+        href: expressroute-move.md
+      - name: Move a circuit from classic to Resource Manager
+        href: expressroute-howto-move-arm.md
+      - name: Migrate associated virtual networks from classic to Resource Manager
+        href: expressroute-migration-classic-resource-manager.md
