--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -126,6 +126,12 @@
           href: expressroute-howto-circuit-arm.md#to-update-the-expressroute-circuit-bandwidth
         - name: Azure CLI
           href: howto-circuit-cli.md#to-update-the-expressroute-circuit-bandwidth
+  - name: Configure site-to-site coexisting connections
+    items:
+    - name: Azure portal
+      href: how-to-configure-coexisting-gateway-portal.md
+    - name: Azure PowerShell
+      href: expressroute-howto-coexist-resource-manager.md
   - name: Global Reach
     items:
     - name: Overview
@@ -148,28 +154,8 @@
         href: expressroute-howto-linkvnet-arm.md?tabs=maximum#configure-expressroute-fastpath
 - name: Deploy
   items:
-  - name: ExpressRoute gateways
-    items:
-    - name: Overview
-      href: expressroute-about-virtual-network-gateways.md
-    - name: Configure a virtual network gateway
-      items:
-      - name: Azure portal
-        href: expressroute-howto-add-gateway-portal-resource-manager.md
-      - name: Azure PowerShell
-        href: expressroute-howto-add-gateway-resource-manager.md
-  - name: Zone-redundant gateways
-    items:
-    - name: Overview
-      href: ../vpn-gateway/about-zone-redundant-vnet-gateways.md?toc=/azure/expressroute/toc.json
-    - name: About Migrating to an AZ gateway
-      href: gateway-migration.md
-    - name: Migrate to an AZ gateway
-      items:
-      - name: Azure portal
-        href: expressroute-howto-gateway-migration-portal.md
-      - name: Azure PowerShell
-        href: expressroute-howto-gateway-migration-powershell.md
+  - name: ExpressRoute Metro
+    href: metro.md
   - name: ExpressRoute Direct
     items:
     - name: Overview
@@ -186,8 +172,32 @@
       href: expressroute-howto-macsec.md
     - name: Rate limit for ExpressRoute Direct circuit
       href: rate-limit.md
-  - name: ExpressRoute Metro
-    href: metro.md
+  - name: ExpressRoute gateways
+    items:
+    - name: Overview
+      href: expressroute-about-virtual-network-gateways.md
+    - name: Configure a virtual network gateway
+      items:
+      - name: Azure portal
+        href: expressroute-howto-add-gateway-portal-resource-manager.md
+      - name: Azure PowerShell
+        href: expressroute-howto-add-gateway-resource-manager.md
+  - name: Zone-redundant gateways
+    items:
+    - name: Overview
+      href: ../vpn-gateway/about-zone-redundant-vnet-gateways.md?toc=/azure/expressroute/toc.json
+    - name: Deploy a zone-redundant gateway
+      href: ../vpn-gateway/create-zone-redundant-vnet-gateway.md?toc=/azure/expressroute/toc.json
+    - name: Migrate to zone-redundant gateway
+      items:
+      - name: Overview
+        href: gateway-migration.md
+      - name: Migrate
+        items:
+        - name: Azure portal
+          href: expressroute-howto-gateway-migration-portal.md
+        - name: Azure PowerShell
+          href: expressroute-howto-gateway-migration-powershell.md
   - name: Traffic Collector
     items:
     - name: Overview
@@ -196,26 +206,20 @@
       href: how-to-configure-traffic-collector.md
 - name: Resiliency
   items:
-  - name: Design architecture for resiliency
-    href: design-architecture-for-resiliency.md
+  - name: Design and architecture
+    items:
+    - name: Overview
+      href: design-architecture-for-resiliency.md
+    - name: High Availability
+      href: designing-for-high-availability-with-expressroute.md
+    - name: Disaster Recovery
+      items:
+      - name: Private Peering
+        href: designing-for-disaster-recovery-with-expressroute-privatepeering.md
+      - name: Using VPN as a backup
+        href: use-s2s-vpn-as-backup-for-expressroute-privatepeering.md
   - name: Evaluate ExpressRoute circuit resiliency
     href: evaluate-circuit-resiliency.md
-  - name: Configure ExpressRoute and site-to-site coexisting connections
-    items:
-    - name: Azure portal
-      href: how-to-configure-coexisting-gateway-portal.md
-    - name: Azure PowerShell
-      href: expressroute-howto-coexist-resource-manager.md
-  - name: Create a zone-redundant VNet gateway in Azure Availability Zones
-    href: ../vpn-gateway/create-zone-redundant-vnet-gateway.md?toc=/azure/expressroute/toc.json
-  - name: High Availability - Design
-    href: designing-for-high-availability-with-expressroute.md
-  - name: Disaster Recovery - Design
-    items:
-    - name: Private Peering
-      href: designing-for-disaster-recovery-with-expressroute-privatepeering.md
-    - name: Using VPN as a backup
-      href: use-s2s-vpn-as-backup-for-expressroute-privatepeering.md
 - name: Security
   items:
   - name: Security baseline
